--- a/roles/ide/templates/project/netbeans/pom.xml.j2
+++ b/roles/ide/templates/project/netbeans/pom.xml.j2
@@ -2,12 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.nortlam.testing</groupId>
-    <artifactId>projectname</artifactId>
-    <version>2.0</version>
+    <groupId>{{ project_package }}</groupId>
+    <artifactId>{{ project_name }}</artifactId>
+    <version>1.0</version>
     <packaging>war</packaging>
 
-    <name>projectname</name>
+    <name>{{ project_display_name }}</name>
+    <description>{{ project_description }}</description>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -36,8 +37,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
