--- a/roles/ide/templates/project/netbeans/src/main/webapp/index.html.j2
+++ b/roles/ide/templates/project/netbeans/src/main/webapp/index.html.j2
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
+        <title>{{ project_name }}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>{{ project_display_name }}</h1>
     </body>
 </html>
