--- a/roles/ide/templates/project/netbeans/pom.xml.j2
+++ b/roles/ide/templates/project/netbeans/pom.xml.j2
@@ -2,13 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>{{ project_package }}</groupId>
-    <artifactId>{{ project_name }}</artifactId>
+    <groupId>{{ microservice_package }}</groupId>
+    <artifactId>{{ microservice_name }}</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
 
-    <name>{{ project_display_name }}</name>
-    <description>{{ project_description }}</description>
+    <name>{{ microservice_name }}</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
