--- a/roles/ide/templates/project/netbeans/src/main/webapp/index.html.j2
+++ b/roles/ide/templates/project/netbeans/src/main/webapp/index.html.j2
@@ -5,6 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>{{ project_display_name }}</h1>
+        <h1>{{ microservice_name }}</h1>
     </body>
 </html>
